--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "run:server":  "./node_modules/.bin/json-server --watch server/db.json"
+    "server":  "./node_modules/.bin/json-server --watch server/db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
